--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,10 @@
 :root {
     --page-background: rgb(58, 94, 100);
     --swiper-background: rgb(57, 66, 71);
+    --widget-background: rgb(216, 216, 216);
+    --widget-text-color: #000;
+    --widget-title-background: rgb(255, 255, 255);
+    --widget-title-color: rgb(51, 51, 51);
 }
 
 html, body {
@@ -8,6 +12,7 @@ html, body {
     margin: 0;
     background: var(--page-background);
     user-select: none;
+    font-family: sans-serif;
 }
 
 #modal {
@@ -19,12 +24,16 @@ html, body {
     position: fixed;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) rotate(45deg);
     background: rgba(0, 0, 0, 0.3);
     border-radius: 50%;
     box-shadow: 0 0 30px #000;
     filter: opacity(0);
     overflow: hidden;
+}
+
+#modal span {
+    transform: rotate(-45deg);
 }
 
 #block {
@@ -75,4 +84,59 @@ html, body {
 #modal-block:hover {
     box-shadow: 0 0 30px #000;
     filter: contrast(60%);
+}
+
+#modaler {
+    filter: opacity(0);
+    transform: scale(0);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    transition: 0.3s filter;
+}
+
+#modal-triger {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#widget {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    background: var(--widget-background);
+    transform: translate(-50%, -50%) scale(0);
+    min-width: 50vw;
+    min-height: 30vw;
+    border-radius: 3px;
+    box-shadow: 0 0 23px rgba(0, 0, 0, 0.6);
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    overflow: hidden;
+    transition: 0.3s transform;
+}
+
+#widget-title {
+    background: var(--widget-title-background);
+    width: 100%;
+    min-height: 5vw;
+    margin: 0;
+    padding: 0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    text-align: center;
+    color: var(--widget-title-color);
+    /* text-transform: uppercase; */
+}
+
+#widget-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
 }
